Use virutal threads for more flexibility